tests/route53/route53config/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: route53config
