tests/route53/route53config/01-general-policy.yaml
# Copyright 2026 kropath Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
apiVersion: aws.kropath.run/v1alpha1
kind: Route53Config
metadata:
  name: general-policy
  namespace: route53config
  labels:
    aws.kropath.run/resource-name: general-policy
spec:
  mandatory:
    defaultTTL: 0
    healthCheckRequestInterval: 0
    healthCheckFailureThreshold: 0
    resolverEndpointType: ""
    tags: {}
    syncedLabels: {}
    syncedAnnotations: {}
  defaults:
    defaultTTL: 300
    healthCheckRequestInterval: 30
    healthCheckFailureThreshold: 3
    resolverEndpointType: ""
    tags: {}
    syncedLabels: {}
    syncedAnnotations: {}
