tests/route53/route53config/09-invalid-interval-value.yaml
# Copyright 2026 kropath Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# Invalid: healthCheckRequestInterval set to 20 (not in {0, 10, 30}).
---
apiVersion: aws.kropath.run/v1alpha1
kind: Route53Config
metadata:
  name: bad-interval-value
  namespace: route53config
spec:
  mandatory:
    defaultTTL: 0
    healthCheckRequestInterval: 0
    healthCheckFailureThreshold: 0
    resolverEndpointType: ""
    tags: {}
    syncedLabels: {}
    syncedAnnotations: {}
  defaults:
    defaultTTL: 0
    healthCheckRequestInterval: 20
    healthCheckFailureThreshold: 0
    resolverEndpointType: ""
    tags: {}
    syncedLabels: {}
    syncedAnnotations: {}
